Added Specific text files to test the functionality of every validation check in validate.c. Update Makefile so running make test-<type> will created output for that specific test

--- a/src/makefile
+++ b/src/makefile
@@ -20,6 +20,24 @@ run:
 test:
 	./quad-solver < ../test/testfile.txt
 
+test-1set:
+	./quad-solver < ../test/test-1set.txt
+
+test-2set:
+	./quad-solver < ../test/test-2set.txt
+
+test-bounds:
+	./quad-solver < ../test/test-bounds.txt
+
+test-inf:
+	./quad-solver < ../test/test-inf.txt
+
+test-nan:
+	./quad-solver < ../test/test-nan.txt
+
+test-norm:
+	./quad-solver < ../test/test-nor.txt
+
 test-cli:
 	./quad-solver 1 5 6
 
